# event-formation-unit

./: Jenkinsfile  conanfile.txt
prototype2/common/clustering/: Event.cpp  Event.h
prototype2/gdgem/: CMakeLists.txt  GdGemBase.cpp  GdGemBaseTest.cpp  NMXConfig.cpp  NMXConfig.h
prototype2/gdgem/nbi_impl/: CMakeLists.txt  Doxyfile  nmxclustererh5.cpp  testNMXClustererFile.cpp
prototype2/gdgem/nbi_impl/clusterer/include/: NMXBoxAdministration.h  NMXClusterManager.h  NMXClusterPairing.h  NMXClusterer.h  NMXClustererDefinitions.h  NMXClustererSettings.h  NMXLocationFinder.h  NMXPlaneClusterer.h  NMXQmatrix.h
prototype2/gdgem/nbi_impl/clusterer/src/: NMXBoxAdministration.cpp  NMXClusterManager.cpp  NMXClusterPairing.cpp  NMXClusterer.cpp  NMXLocationFinder.cpp  NMXPlaneClusterer.cpp
prototype2/gdgem/nbi_impl/helper/include/: ClusterReader.h  NMXClustererHelper.h  NMXClustererVerification.h  SpecialDataReader.h  VerifyClusters.h  WriteVerificationToDisk.h
prototype2/gdgem/nbi_impl/helper/src/: ClusterReader.cpp  NMXClustererVerification.cpp  SpecialDataReader.cpp  VerifyClusters.cpp  WriteVerificationToDisk.cpp
prototype2/gdgem/nbi_impl/misc/: readnmx5htest.cpp
prototype2/gdgem/nbi_impl/scripts/: drawVMMxClusters.py  drawVMMxDataPointDensity.py
prototype2/gdgem/nbi_impl/tests/: testBoxAdministration.cpp
prototype2/gdgem/srs/: BuilderVMM3.cpp  CalibrationFile.cpp  CalibrationFile.h  CalibrationFileTest.cpp  CalibrationFileTestData.h
prototype2/multiblade/: MBCaenBase.cpp  MBCaenBase.h
prototype2/multiblade/caen/: DataParser.cpp  DataParser.h
prototype2/multiblade/generators/: mbgen_hits.cpp
